url: https://www.demoblaze.com
name: TS_005 - Validate the Search for a product by category functionality
tags:
  - P1
  - category
---
- runFlow: ../subflows/open_home.yaml
- takeScreenshot: 01_home_page

- tapOn: "Phones"
- assertVisible: "Samsung galaxy s6"
- assertNotVisible: "MacBook air"

- tapOn: "Laptops"
- assertVisible: "MacBook air"
- assertNotVisible: "Samsung galaxy s6"

- tapOn: "Monitors"
- assertVisible: "Apple monitor 24"
- takeScreenshot: 99_final_state
